--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "sequelize": "^6.28.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.0"
   }
 }
